Revert "fix: change header text color to white for better visibility"
This reverts commit c09004f1ecfee27041c7be0b0ea780d651cdd3a7.

--- a/css/style.scss
+++ b/css/style.scss
@@ -218,7 +218,7 @@ $grid-spacing: {{ site.data.settings.grid_settings.grid_spacing }}px;
 	.header {
 		.header__title,
 		.header__tagline {
-			color: white;
+			color: $dark-text-dark-color;
 		}
 	}
 
